# FlightMetrics

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
contribution/: contribute.md
public/api/aircraft/A318-100/: index.json
public/api/aircraft/A318-111/: index.json
public/api/aircraft/A319-132/: index.json
public/api/aircraft/A320-214/: index.json
public/api/aircraft/A320-251N/: index.json
public/api/aircraft/A321-211/: index.json
public/api/aircraft/A330-243/: index.json
public/api/aircraft/template/: index.md
public/api/aircrafts/: index.json
public/api/airport/leal/: index.json
public/api/airport/lebl/: index.json
public/api/airport/legr/: index.json
public/api/airport/leib/: index.json
public/api/airport/lemd/: index.json
public/api/airport/lemg/: index.json
public/api/airport/lepa/: index.json
public/api/airports/: index.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
src/app/choose/: page.tsx
src/app/components/: cube.tsx  footer.tsx  mcdu.tsx  titlebar.tsx
src/app/context/: mcduContext.tsx  simbriefContext.tsx
src/app/core/: calculation.ts
src/app/dashboard/: page.tsx
src/app/result/: page.tsx
src/app/settings/: page.tsx
src/app/simbrief/: page.tsx
src/app/utils/: API.ts  aircraftV.ts  convert.ts  states.tsx
src/app/welcome/: page.tsx
src/config/: general.ts
(+33 files in other folders)
