[package]
name = "flightmetrics"
version = "1.3.4"
description = "FlightMetrics is a tool for aircraft simulation"
authors = ["you"]
license = ""
repository = ""
default-run = "flightmetrics"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "shell-open", "path-all", "http-all", "window-set-always-on-top", "process-relaunch", "updater", "window-close", "window-unmaximize", "window-maximize", "window-hide", "window-show", "window-unminimize", "window-start-dragging", "window-minimize"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
